// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component when loaded ingredients 1`] = `
<div
  className="container"
>
  <div
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "zIndex": 1,
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": 8,
        }
      }
    >
      <div
        style={
          Object {
            "muiPrepared": true,
            "padding": 16,
            "position": "relative",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "display": "block",
              "fontSize": 24,
              "lineHeight": "36px",
              "muiPrepared": true,
            }
          }
        >
          test title
        </span>
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "display": "block",
              "fontSize": 14,
              "muiPrepared": true,
            }
          }
        >
          test
        </span>
      </div>
      <div
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 14,
            "muiPrepared": true,
            "padding": 16,
          }
        }
      >
        <div
          className="row"
        >
          <div
            className="col-lg-4 col-md-6 col-xs-12"
          >
            <div
              alt="test title, image"
              className="sc-bdVaJa egwyhe"
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "#ffffff",
                  "backgroundImage": "url(test.png)",
                  "borderRadius": 2,
                  "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                         0 1px 4px rgba(0, 0, 0, 0.12)",
                  "boxSizing": "border-box",
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            />
          </div>
          <div
            className="col-lg-4 col-md-6 col-xs-12"
          >
            <h3>
              Ingredients
            </h3>
            <ol>
              <li>
                ingredient
              </li>
            </ol>
          </div>
          <div
            className="col-lg-4 col-md-6 col-xs-12"
          >
            <h3>
              Info
            </h3>
            <ul>
              <li>
                Publisher: 
                <a
                  href={undefined}
                >
                  test
                </a>
              </li>
              <li>
                Social rank: 
              </li>
              <li>
                ID of recipe: 
                1
              </li>
              <li>
                Recipe source: 
                <a
                  href={undefined}
                >
                  link
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render component while loading ingredients 1`] = `
<div
  className="container"
>
  <div
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "zIndex": 1,
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": 8,
        }
      }
    >
      <div
        style={
          Object {
            "muiPrepared": true,
            "padding": 16,
            "position": "relative",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "display": "block",
              "fontSize": 24,
              "lineHeight": "36px",
              "muiPrepared": true,
            }
          }
        >
          test title
        </span>
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "display": "block",
              "fontSize": 14,
              "muiPrepared": true,
            }
          }
        >
          test
        </span>
      </div>
      <div
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 14,
            "muiPrepared": true,
            "padding": 16,
          }
        }
      >
        <div
          className="row"
        >
          <div
            className="col-lg-4 col-md-6 col-xs-12"
          >
            <div
              alt="test title, image"
              className="sc-bdVaJa egwyhe"
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "#ffffff",
                  "backgroundImage": "url(test.png)",
                  "borderRadius": 2,
                  "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                         0 1px 4px rgba(0, 0, 0, 0.12)",
                  "boxSizing": "border-box",
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            />
          </div>
          <div
            className="col-lg-4 col-md-6 col-xs-12"
          >
            <h3>
              Ingredients
            </h3>
            <div>
              Ingredients are being loaded...
            </div>
          </div>
          <div
            className="col-lg-4 col-md-6 col-xs-12"
          >
            <h3>
              Info
            </h3>
            <ul>
              <li>
                Publisher: 
                <a
                  href={undefined}
                >
                  test
                </a>
              </li>
              <li>
                Social rank: 
              </li>
              <li>
                ID of recipe: 
                1
              </li>
              <li>
                Recipe source: 
                <a
                  href={undefined}
                >
                  link
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
